--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,7 @@
   border: 1px solid var(--color-white);
   min-height: 4.5rem;
   font-weight: 700;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.041);
 }
 
 .tarea p {
@@ -127,4 +128,5 @@
 .tarea-tema-oscuro {
   background-color: var(--color-white);
   border: 1px solid transparent;
+  box-shadow: 0 2px 4px rgba(238, 238, 238, 0.288);
 }
