--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   font-size: 1rem;
   outline: none;
   border: none;
-  border-bottom: 1px solid var(--color-base-black);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.281);
   padding: .5rem;
   text-align: center;
   margin-bottom: 1rem;
