--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --color-white-p: rgba(255, 255, 255, 0.877);
 
   --color-base-black: rgba(54, 54, 54, 0.959);
+  --color-tarea-terminada: rgba(101, 156, 63, 0.493);
 }
 
 * {
