--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,19 @@
   margin-bottom: 5rem;
 }
 
+.contenedor-tema {
+  border: 2px solid var(--color-white);
+  border-radius: 50px;
+  width: 3rem;
+  padding: .2rem .2rem .26rem ;
+}
+
+.contenedor-tema p{
+  font-size: .6rem;
+  cursor: pointer;
+}
+
+
 .contenedor-lista {
   width: 80%;
 }
@@ -79,7 +92,17 @@
   text-decoration: line-through;
 }
 
-.estado {
+.estado:hover {
+  color: rgb(51, 182, 84);
+}
+
+.eliminar-nota:hover {
+  color:rgb(202, 71, 71);
+}
+
+.estado,
+.eliminar-nota {
   cursor: pointer;
   user-select: none;
+  padding: .3rem;
 }
