--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,24 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding-top: 3rem;
+  padding-top: 2.5rem;
   margin-bottom: 5rem;
+}
+
+.header {
+  width: 100%;
+  padding: 0 2rem;
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .contenedor-tema {
   border: 2px solid var(--color-white);
   border-radius: 50px;
   width: 3rem;
+  height: 1.5rem;
   padding: .2rem .2rem .26rem ;
 }
 
