--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
   align-items: center;
   flex-direction: column;
   padding-top: 2.5rem;
-  margin-bottom: 5rem;
+  padding-bottom: 5rem;
+  transition: all .5s;
 }
 
 .header {
@@ -40,14 +41,14 @@
 }
 
 .contenedor-tema {
-  border: 2px solid var(--color-white);
+  border: 1px solid var(--color-white);
   border-radius: 50px;
   width: 3rem;
   height: 1.5rem;
   padding: .2rem .2rem .26rem ;
 }
 
-.contenedor-tema p{
+.contenedor-tema p {
   font-size: .6rem;
   cursor: pointer;
 }
@@ -79,6 +80,7 @@
 /* ------------------------------------- */
 
 .tarea {
+  background-color: var(--color-white);
   color: var(--color-base-black);
   width: 100%;
   word-wrap: break-word;
@@ -87,22 +89,16 @@
   transition: all .5s;
   padding: 1rem;
   border-radius: 4px;
-  border: 1px solid var(--color-white);
+  /* border: 1px solid var(--color-white); */
   min-height: 4.5rem;
   font-weight: 700;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.041);
+  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.26);
 }
 
 .tarea p {
   width: 80%;
   user-select: none;
 }
-
-/* .tarea-tema-oscuro {
-  background-color: var(--color-white);
-  border: 1px solid transparent;
-  box-shadow: 0 2px 4px rgba(238, 238, 238, 0.288);
-} */
 
 .nota {
   background-color: white;
@@ -130,4 +126,16 @@
   cursor: pointer;
   user-select: none;
   padding: .2rem;
+}
+
+/* ..................................... */
+
+.app-oscuro {
+  background-color: var(--color-base-black);
+  color: var(--color-white);
+  border-color: none;
+}
+
+.nota-oscuro p {
+  color: var(--color-white);
 }
