--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,9 @@
 }
 
 .contenedor-tema {
-  border: 1px solid var(--color-white);
-  border-radius: 50px;
-  width: 3rem;
-  height: 1.5rem;
-  padding: .2rem .2rem .26rem ;
+  border-bottom: 1px solid var(--color-white);
+  width: 2.5rem;
+  padding: .3rem 0;
 }
 
 .contenedor-tema p {
@@ -139,7 +137,7 @@
 }
 
 .tarea-oscuro.terminado {
-  background-color: rgba(102, 172, 102, 0.815);
+  background-color: var(--color-tarea-terminada);
   transition: all .5s;
   user-select: none;
   border-color: transparent;
